--- a/Index.html
+++ b/Index.html
@@ -3,103 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Scan-Dalous</title>
+  <title>Scan-dalous Dating</title>
   <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="border-wrapper">
     <div class="container">
-      <h1 class="title"><em>The 1st<br>In-Person<br>Dating App</em></h1>
-      <div class="subheading">
-        <p>10 questions</p>
-        <p>100% private</p>
-        <p>1000X more <span class="scan-dalous"><em>SCAN-DALOUS</em></span> than swiping</p>
-      </div>
+      <h1 class="title">The 1st<br/>In-Person<br/>Dating App</h1>
+      <p class="subtitle">
+        10 questions<br/>100% private<br/>
+        1000X more <em><span class="underline-animate">SCAN-DALOUS</span></em> than swiping
+      </p>
       <form id="quizForm">
-
-        <!-- Question 1 -->
-        <div class="question-block">
-          <p class="question"><strong>1… Do you prefer to make the first move or get approached?</strong></p>
-          <label><input type="radio" name="q1" value="first"/> I want to make the first move</label>
-          <label><input type="radio" name="q1" value="approached"/> I want to get approached</label>
+        <div class="question">
+          <p><strong>1… Do you prefer to make the first move or get approached?</strong></p>
+          <label><input type="radio" name="q1" value="first"> I want to make the first move</label><br/>
+          <label><input type="radio" name="q1" value="approached"> I want to get approached</label>
         </div>
 
-        <!-- Question 2 -->
-        <div class="question-block">
-          <p class="question"><strong>2… Are you looking for love or a good time?</strong></p>
-          <label><input type="radio" name="q2" value="love"/> Love</label>
-          <label><input type="radio" name="q2" value="evolve"/> Either one, I like to let things evolve naturally</label>
-          <label><input type="radio" name="q2" value="goodtime"/> A good time</label>
+        <div class="question">
+          <p><strong>2… Are you looking for love or a good time?</strong></p>
+          <label><input type="radio" name="q2" value="love"> Love</label><br/>
+          <label><input type="radio" name="q2" value="either"> Either one, I like to let things evolve naturally</label><br/>
+          <label><input type="radio" name="q2" value="fun"> A good time</label>
         </div>
 
-        <!-- Question 3 -->
-        <div class="question-block">
-          <p class="question"><strong>3… Which vibe turns you on the most?</strong></p>
-          <label><input type="radio" name="q3" value="passionate"/> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label>
-          <label><input type="radio" name="q3" value="fun"/> One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, experimenting with new sex toys</label>
-          <label><input type="radio" name="q3" value="rough"/> Power exchange, rough sex, spanking, BDSM, naughty mind games, filthy dirty talk</label>
+        <div class="question">
+          <p><strong>3… Which vibe turns you on the most?</strong></p>
+          <label><input type="radio" name="q3" value="passionate"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label><br/>
+          <label><input type="radio" name="q3" value="wild"> One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, experimenting with new sex toys</label><br/>
+          <label><input type="radio" name="q3" value="kinky"> Power exchange, rough sex, spanking, BDSM, naughty mind games, filthy dirty talk</label>
         </div>
 
-        <!-- Question 4 -->
-        <div class="question-block">
-          <p class="question"><strong>4… Are you comfortable with PDA?</strong></p>
-          <label><input type="radio" name="q4" value="yes"/> Yes</label>
-          <label><input type="radio" name="q4" value="little"/> Only a little</label>
-          <label><input type="radio" name="q4" value="no"/> No</label>
+        <div class="question">
+          <p><strong>4… Are you comfortable with PDA?</strong></p>
+          <label><input type="radio" name="q4" value="yes"> Yes</label><br/>
+          <label><input type="radio" name="q4" value="some"> Only a little</label><br/>
+          <label><input type="radio" name="q4" value="no"> No</label>
         </div>
 
-        <!-- Question 5 -->
-        <div class="question-block">
-          <p class="question"><strong>5… Are you looking for a sugar daddy/momma?</strong></p>
-          <label><input type="radio" name="q5" value="yes"/> Yes</label>
-          <label><input type="radio" name="q5" value="no"/> No thank you</label>
-          <label><input type="radio" name="q5" value="iam"/> Are you kidding? I am the sugar daddy/momma!</label>
+        <div class="question">
+          <p><strong>5… Are you looking for a sugar daddy/momma?</strong></p>
+          <label><input type="radio" name="q5" value="yes"> Yes</label><br/>
+          <label><input type="radio" name="q5" value="no"> No thank you</label><br/>
+          <label><input type="radio" name="q5" value="iam"> Are you kidding? I am the sugar daddy/momma!</label>
         </div>
 
-        <!-- Question 6 -->
-        <div class="question-block">
-          <p class="question"><strong>6… Do you like to be the center of attention?</strong></p>
-          <label><input type="radio" name="q6" value="flaunt"/> Yes, like they say, “if you got it, flaunt it.”</label>
-          <label><input type="radio" name="q6" value="partner_shine"/> Yes, but I prefer to let my partner shine</label>
-          <label><input type="radio" name="q6" value="no_spotlight"/> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
-          <label><input type="radio" name="q6" value="blend_in"/> No, I’d rather my partner and I blend in</label>
+        <div class="question">
+          <p><strong>6… Do you like to be the center of attention?</strong></p>
+          <label><input type="radio" name="q6" value="yes"> Yes, like they say, “if you got it, flaunt it.”</label><br/>
+          <label><input type="radio" name="q6" value="share"> Yes, but I prefer to let my partner shine</label><br/>
+          <label><input type="radio" name="q6" value="partner"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label><br/>
+          <label><input type="radio" name="q6" value="blend"> No, I’d rather my partner and I blend in</label>
         </div>
 
-        <!-- Question 7 -->
-        <div class="question-block">
-          <p class="question"><strong>7… Would you enjoy a threesome?</strong></p>
-          <label><input type="radio" name="q7" value="no"/> No I’d like my partner to be mine & only mine</label>
-          <label><input type="radio" name="q7" value="maybe"/> Maybe, I’d consider it</label>
-          <label><input type="radio" name="q7" value="yeah"/> Yeah it’d be fun</label>
-          <label><input type="radio" name="q7" value="hellyeah"/> Hell yeah! Why stop at 3? The more the merrier</label>
+        <div class="question">
+          <p><strong>7… Would you enjoy a threesome?</strong></p>
+          <label><input type="radio" name="q7" value="no"> No I’d like my partner to be mine & only mine</label><br/>
+          <label><input type="radio" name="q7" value="maybe"> Maybe, I’d consider it</label><br/>
+          <label><input type="radio" name="q7" value="yeah"> Yeah it’d be fun</label><br/>
+          <label><input type="radio" name="q7" value="hellyeah"> Hell yeah! Why stop at 3? The more the merrier</label>
         </div>
 
-        <!-- Question 8 -->
-        <div class="question-block">
-          <p class="question"><strong>8… Do you prefer to give pleasure or receive it?</strong></p>
-          <label><input type="radio" name="q8" value="give"/> Give pleasure</label>
-          <label><input type="radio" name="q8" value="receive"/> Receive pleasure</label>
+        <div class="question">
+          <p><strong>8… Do you prefer to give pleasure or receive it?</strong></p>
+          <label><input type="radio" name="q8" value="give"> Give pleasure</label><br/>
+          <label><input type="radio" name="q8" value="receive"> Receive pleasure</label>
         </div>
 
-        <!-- Question 9 -->
-        <div class="question-block">
-          <p class="question"><strong>9… Who do you want to wear the pants?</strong></p>
-          <label><input type="radio" name="q9" value="control"/> I like to be in control</label>
-          <label><input type="radio" name="q9" value="partner_control"/> I want my partner to take control</label>
-          <label><input type="radio" name="q9" value="dom_street"/> I’m dominant in the streets & submissive in the sheets</label>
-          <label><input type="radio" name="q9" value="sub_street"/> I’m submissive in the streets & dominant in the sheets</label>
-          <label><input type="radio" name="q9" value="switch"/> I like to switch it up</label>
+        <div class="question">
+          <p><strong>9… Who do you want to wear the pants?</strong></p>
+          <label><input type="radio" name="q9" value="control"> I like to be in control</label><br/>
+          <label><input type="radio" name="q9" value="partner"> I want my partner to take control</label><br/>
+          <label><input type="radio" name="q9" value="switch1"> I’m dominant in the streets & submissive in the sheets</label><br/>
+          <label><input type="radio" name="q9" value="switch2"> I’m submissive in the streets & dominant in the sheets</label><br/>
+          <label><input type="radio" name="q9" value="both"> I like to switch it up</label>
         </div>
 
-        <!-- Question 10 -->
-        <div class="question-block">
-          <p class="question"><strong>10… Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</strong></p>
-          <label><input type="radio" name="q10" value="yes"/> Let’s do it! I’m ready for my close-up</label>
-          <label><input type="radio" name="q10" value="no"/> Tempting, but I’ll pass this time</label>
+        <div class="question">
+          <p><strong>10… Feeling frisky? Want to audition to be a star in our reality dating show?</strong></p>
+          <label><input type="radio" name="q10" value="yes"> Let’s do it! I’m ready for my close-up</label><br/>
+          <label><input type="radio" name="q10" value="no"> Tempting, but I’ll pass this time</label>
         </div>
 
-        <button type="submit" class="submit-button">Meet Your Type Now</button>
+        <div class="center">
+          <button type="submit" class="submit-btn">Meet Your Type Now</button>
+        </div>
       </form>
     </div>
   </div>
