--- a/Index.html
+++ b/Index.html
@@ -5,92 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The 1st In-Person Dating App</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="gradient-border">
-      <h1 class="title">The 1st<br>In-Person<br>Dating App</h1>
-      <p class="subheader">
-        10 questions<br>
-        100% private<br>
-        1000X more <span class="scan-dalous">SCAN-DALOUS</span><br>
-        than swiping
-      </p>
+  <div class="border-wrapper">
+    <div class="container">
+      <div class="center">
+        <div class="title">The 1st<br>In-Person<br>Dating App</div>
+        <div class="subtitle">
+          10 questions<br>
+          100% private<br>
+          1000X more <span class="scan-dalous">SCAN-DALOUS</span> than swiping
+        </div>
+      </div>
 
       <form id="quizForm">
         <div class="question">
-          <p><strong>1… Do you prefer to make the first move or get approached?</strong></p>
+          <p>1… Do you prefer to make the first move or get approached?</p>
           <label><input type="radio" name="q1" value="first"> I want to make the first move</label>
-          <label><input type="radio" name="q1" value="approached"> I want to get approached</label>
+          <label><input type="radio" name="q1" value="get"> I want to get approached</label>
         </div>
 
         <div class="question">
-          <p><strong>2… Are you looking for love or a good time?</strong></p>
+          <p>2… Are you looking for love or a good time?</p>
           <label><input type="radio" name="q2" value="love"> Love</label>
           <label><input type="radio" name="q2" value="either"> Either one, I like to let things evolve naturally</label>
           <label><input type="radio" name="q2" value="fun"> A good time</label>
         </div>
 
         <div class="question">
-          <p><strong>3… Which vibe turns you on the most</strong></p>
-          <label><input type="radio" name="q3" value="blue"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label>
-          <label><input type="radio" name="q3" value="green"> One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, experimenting with new sex toys</label>
-          <label><input type="radio" name="q3" value="red"> Power exchange, rough sex, spanking, BDSM, naughty mind games, filthy dirty talk</label>
+          <p>3… Which vibe turns you on the most</p>
+          <label><input type="radio" name="q3" value="whipped"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label>
+          <label><input type="radio" name="q3" value="toys"> One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, experimenting with new sex toys</label>
+          <label><input type="radio" name="q3" value="bdsm"> Power exchange, rough sex, spanking, BDSM, naughty mind games, filthy dirty talk</label>
         </div>
 
         <div class="question">
-          <p><strong>4… Are you comfortable with PDA?</strong></p>
+          <p>4… Are you comfortable with PDA?</p>
           <label><input type="radio" name="q4" value="yes"> Yes</label>
-          <label><input type="radio" name="q4" value="some"> Only a little</label>
+          <label><input type="radio" name="q4" value="little"> Only a little</label>
           <label><input type="radio" name="q4" value="no"> No</label>
         </div>
 
         <div class="question">
-          <p><strong>5… Are you looking for a sugar daddy/momma?</strong></p>
+          <p>5… Are you looking for a sugar daddy/momma?</p>
           <label><input type="radio" name="q5" value="yes"> Yes</label>
           <label><input type="radio" name="q5" value="no"> No thank you</label>
           <label><input type="radio" name="q5" value="iam"> Are you kidding? I am the sugar daddy/momma!</label>
         </div>
 
         <div class="question">
-          <p><strong>6… Do you like to be the center of attention?</strong></p>
-          <label><input type="radio" name="q6" value="yes"> Yes, like they say, “if you got it, flaunt it.”</label>
-          <label><input type="radio" name="q6" value="yespartner"> Yes, but I prefer to let my partner shine</label>
-          <label><input type="radio" name="q6" value="nopartner"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
+          <p>6… Do you like to be the center of attention?</p>
+          <label><input type="radio" name="q6" value="flaunt"> Yes, like they say, “if you got it, flaunt it.”</label>
+          <label><input type="radio" name="q6" value="partner shine"> Yes, but I prefer to let my partner shine</label>
+          <label><input type="radio" name="q6" value="partner main"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
           <label><input type="radio" name="q6" value="blend"> No, I’d rather my partner and I blend in</label>
         </div>
 
         <div class="question">
-          <p><strong>7… Would you enjoy a threesome?</strong></p>
+          <p>7… Would you enjoy a threesome?</p>
           <label><input type="radio" name="q7" value="no"> No I’d like my partner to be mine & only mine</label>
           <label><input type="radio" name="q7" value="maybe"> Maybe, I’d consider it</label>
           <label><input type="radio" name="q7" value="yeah"> Yeah it’d be fun</label>
-          <label><input type="radio" name="q7" value="hellyeah"> Hell yeah! Why stop at 3? The more the merrier</label>
+          <label><input type="radio" name="q7" value="hell yeah"> Hell yeah! Why stop at 3? The more the merrier</label>
         </div>
 
         <div class="question">
-          <p><strong>8… Do you prefer to give pleasure or receive it?</strong></p>
+          <p>8… Do you prefer to give pleasure or receive it?</p>
           <label><input type="radio" name="q8" value="give"> Give pleasure</label>
           <label><input type="radio" name="q8" value="receive"> Receive pleasure</label>
         </div>
 
         <div class="question">
-          <p><strong>9… Who do you want to wear the pants?</strong></p>
+          <p>9… Who do you want to wear the pants?</p>
           <label><input type="radio" name="q9" value="control"> I like to be in control</label>
-          <label><input type="radio" name="q9" value="partnercontrol"> I want my partner to take control</label>
-          <label><input type="radio" name="q9" value="switch1"> I’m dominant in the streets & submissive in the sheets</label>
-          <label><input type="radio" name="q9" value="switch2"> I’m submissive in the streets & dominant in the sheets</label>
-          <label><input type="radio" name="q9" value="both"> I like to switch it up</label>
+          <label><input type="radio" name="q9" value="partner control"> I want my partner to take control</label>
+          <label><input type="radio" name="q9" value="dom street"> I’m dominant in the streets & submissive in the sheets</label>
+          <label><input type="radio" name="q9" value="sub street"> I’m submissive in the streets & dominant in the sheets</label>
+          <label><input type="radio" name="q9" value="switch"> I like to switch it up</label>
         </div>
 
         <div class="question">
-          <p><strong>10… Feeling frisky? Want to audition to be a star in our reality dating show?</strong></p>
+          <p>10… Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</p>
           <label><input type="radio" name="q10" value="yes"> Let’s do it! I’m ready for my close-up</label>
-          <label><input type="radio" name="q10" value="no"> Tempting, but I’ll pass this time</label>
+          <label><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
         </div>
 
-        <button type="submit" class="submit-button">Meet your type now!</button>
-        <p id="alert" class="alert-message"></p>
+        <div class="center">
+          <button class="submit-btn" type="submit">See My Results</button>
+        </div>
       </form>
     </div>
   </div>
