--- a/Result.html
+++ b/Result.html
@@ -34,6 +34,17 @@
       line-height: 1.5;
     }
 
+    .audition {
+      font-size: 1.2rem;
+      margin-top: 40px;
+      font-weight: 500;
+      line-height: 1.6;
+    }
+
+    .audition strong {
+      font-weight: 700;
+    }
+
     .red {
       background-color: #950606;
       text-shadow: 0 0 5px #ff4d4d, 0 0 10px #ff4d4d;
@@ -52,12 +63,16 @@
 </head>
 <body id="resultBody">
   <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
-  <div class="subtitle" id="subtitleText"></div>
 
   <div class="bonus" id="bonusText" style="display: none;">
     Visit our chocolate shop and use the password: <strong id="sweetSpot">Sweet Spot!</strong><br>
     to gain entry to our speakeasy:<br>
     <strong id="sugarDaddys">Sugar Daddy’s</strong>
+  </div>
+
+  <div class="audition" id="auditionText" style="display: none;">
+    You’re invited to audition for our reality dating show! Participate in the speed dating game
+    <strong>The Pickup Line</strong> to audition. Once you’re in, you won’t want to pull out.
   </div>
 
   <script>
@@ -69,8 +84,8 @@
 
     const resultText = document.getElementById("resultText");
     const resultBody = document.getElementById("resultBody");
-    const subtitleText = document.getElementById("subtitleText");
     const bonusText = document.getElementById("bonusText");
+    const auditionText = document.getElementById("auditionText");
 
     if (room === "red") {
       resultText.innerHTML = "Meet your type<br>in our<br>RED ROOM!";
@@ -87,13 +102,8 @@
       bonusText.style.display = "block";
     }
 
-    // Show custom subtitle if q4 and q6 match the desired values
     if (q4 === "yes" && (q6 === "flaunt" || q6 === "partner shine")) {
-      subtitleText.innerHTML = `
-        <strong>You’re invited to audition for our reality dating show!</strong><br>
-        Participate in the speed dating game <em><strong>The Pickup Line</strong></em> to audition.<br>
-        Once you’re in, you won’t want to pull out.
-      `;
+      auditionText.style.display = "block";
     }
   </script>
 </body>
